[gd_scene load_steps=7 format=3 uid="uid://cn6qis84gt5lg"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_h1b3x"]
[ext_resource type="Texture2D" uid="uid://p63ci3xuubq5" path="res://src/Paintbrush blue.png" id="2_a8tom"]
[ext_resource type="Texture2D" uid="uid://ygg41paib22g" path="res://src/Paintbrush red.png" id="3_a8ilg"]
[ext_resource type="Texture2D" uid="uid://ub6mwncamcpk" path="res://src/Paintbrush green.png" id="4_2cduq"]
[ext_resource type="Texture2D" uid="uid://c2tqfu6fcyawe" path="res://src/Blue Pitcher.png" id="5_l2lt1"]

[sub_resource type="GDScript" id="GDScript_uelqr"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h1b3x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1152, 648)
scale = Vector2(3, 3)
script = SubResource("GDScript_uelqr")

[node name="Blue Button" type="Button" parent="."]
offset_right = 165.0
offset_bottom = 443.0

[node name="Blue Brush" type="Sprite2D" parent="Blue Button"]
position = Vector2(81, 214)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_a8tom")

[node name="Red Button" type="Button" parent="."]
offset_left = 328.0
offset_top = -1.0
offset_right = 487.0
offset_bottom = 444.0

[node name="Red Brush" type="Sprite2D" parent="Red Button"]
position = Vector2(77, 223)
scale = Vector2(0.420608, 0.416992)
texture = ExtResource("3_a8ilg")

[node name="GreenButton" type="Button" parent="."]
offset_left = 166.0
offset_top = 1.0
offset_right = 327.0
offset_bottom = 443.0

[node name="Green Brush" type="Sprite2D" parent="GreenButton"]
position = Vector2(79, 222)
scale = Vector2(0.405537, 0.405537)
texture = ExtResource("4_2cduq")

[node name="Fill button" type="Button" parent="."]
offset_left = 492.0
offset_top = 3.0
offset_right = 731.0
offset_bottom = 241.0

[node name="Sprite2D" type="Sprite2D" parent="Fill button"]
position = Vector2(119, 116)
scale = Vector2(2.14948, 2.11856)
texture = ExtResource("5_l2lt1")

[connection signal="pressed" from="Blue Button" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="Red Button" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="GreenButton" to="." method="_on_green_button_pressed"]
[connection signal="button_up" from="Fill button" to="." method="_on_fill_button_button_up"]
[connection signal="pressed" from="Fill button" to="." method="_on_fill_button_pressed"]
